fixed task-template alignment

--- a/app/assets/stylesheets/components/_task-template-card.scss
+++ b/app/assets/stylesheets/components/_task-template-card.scss
@@ -3,7 +3,6 @@
   background-color: white;
   margin: 0;
   display: flex;
-  justify-content: space-between;
   padding: 10px 24px;
   margin-bottom: 4px;
   &:last-child {
